# differentiable_tda

./: .gitignore  Architecture.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
benchmarks/: benchmark_tda.py
csrc/: tda_core.cpp  tda_kernel.cu
differentiable_tda/: __init__.py  autograd.py
tests/: test_core.py
